--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,19 @@
 body{
+    margin: 0px;
     font-family: 'Ubuntu';
 }
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgrey;
+}
 .clr1{
     color: rgb(1, 18, 247);
+    font-family: 'Lobster';
 }
 .half-width{
     width: 40%;
@@ -15,4 +23,52 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-site{
+    background-image: url("web/my top-banner copy.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.get-button{
+    text-decoration: none;
+    background-color: blueviolet;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+.Dream{
+    background-image: url("web/Dream Right].png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.Orange{
+    color: blueviolet;
+}
+.Experinces-class{
+    box-shadow: 10px 20px 40px gray;
+    border-radius: 10px;
+    height: 60%;
+}
+.experince{
+    background-image: url("web/Dream Left.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left:  7px solid lime;
+    border-image-slice: 1;
+    background-color: white;
+}
+#For-Web{
+    border-left: 7px solid gold;
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
+    font-size: 12px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
